syntax = "proto3";

option csharp_namespace = "Saes.Protos.ModelServices";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "models.proto";
import "statuses.proto";

package tableData;

// NOT_IMPLEMENTED

service TableColumnDataService {
    rpc Search (TableColumnDataLookup) returns (TableColumnDataLookupResponse);
}

message TableColumnDataLookup
{
	google.protobuf.Int32Value TableColumnDataId = 1;
	google.protobuf.Int32Value TableDataId = 2;
	google.protobuf.StringValue Name = 3;
	google.protobuf.StringValue RusName = 4;
}


// Comment
message TableColumnDataLookupResponse
{
    repeated models.TableColumnDataDto data = 1;
}